--- a/CanadianTest/app/src/main/res/layout/activity_main.xml
+++ b/CanadianTest/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.drantiev.anton.canadiantest.MainActivity"
-    android:id="@+id/main_view">
+    >
 
     <TextView
         android:layout_width="match_parent"
@@ -14,29 +15,36 @@
         android:textSize="20sp" />
 
     <LinearLayout
+        android:id="@+id/transitions_container_question"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="90sp"
-        android:layout_marginTop="40sp"
-        android:id="@+id/transitions_container">
+        android:layout_marginTop="30sp"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:background="@drawable/home_android_canada"
+        android:alpha="0.7"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true">
 
         <TextView
             android:id="@+id/tv_question"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="40sp"
             android:text="The question?"
             android:textAlignment="center"
-            android:layout_marginTop="40sp"/>
+            android:textStyle="bold"
+            android:textColor="#000"
+
+            />
 
         <RadioGroup
             android:id="@+id/rb_group"
-            android:layout_width="match_parent"
+            android:layout_width="393dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="50sp"
-            android:layout_weight="0.04"
+            android:layout_weight="0.02"
             android:padding="20dp">
 
             <RadioButton
@@ -44,7 +52,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
-                android:text="radio button" />
+                android:text="radio button"
+                />
 
             <RadioButton
                 android:id="@+id/rb_b"
@@ -67,18 +76,40 @@
                 android:padding="20dp"
                 android:text="radio button" />
         </RadioGroup>
-        <Button
-            android:id="@+id/btn_next"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Next"/>
+    </LinearLayout>
+
+
+    <Button
+        android:id="@+id/btn_next"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="60sp"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:text="Next" />
+
+    <LinearLayout
+        android:id="@+id/transitions_container_answer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20sp"
+        android:gravity="center"
+        android:orientation="vertical">
+
         <TextView
             android:id="@+id/text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Transitions are awesome!"
-            android:visibility="gone"/>
+            android:text="answer"
+            android:visibility="gone"
+            android:textColor="#00ff00"
+            android:textSize="18dp"/>
+
+
     </LinearLayout>
 
 
