--- a/CanadianTest/app/src/main/res/layout/activity_results.xml
+++ b/CanadianTest/app/src/main/res/layout/activity_results.xml
@@ -8,21 +8,24 @@
     android:id="@+id/results_view">
 
     <LinearLayout
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginRight="58dp"
-        android:layout_marginEnd="58dp">
+        >
         <RatingBar
             android:id="@+id/rating_bar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:numStars="5"
+            android:numStars="10"
             android:stepSize="1.0"
-            android:rating="0.0"/>
+            android:rating="0.0"
+            android:isIndicator="true"
+            style="?android:attr/ratingBarStyleSmall"
+            android:layout_marginRight="100sp"
+            />
         <TextView
             android:id="@+id/tv_result"
             android:layout_width="match_parent"
