--- a/CanadianTest/app/src/main/res/menu/mainview.xml
+++ b/CanadianTest/app/src/main/res/menu/mainview.xml
@@ -2,8 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/action_settings"
-        android:title="setings"
-        android:orderInCategory="1"
-         />
+        android:id="@+id/menu_settings"
+        android:orderInCategory="100"
+        android:title="Start again"
+
+        />
 </menu>
