--- a/CanadianTest/app/src/main/res/layout/activity_main.xml
+++ b/CanadianTest/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,49 @@
     android:layout_height="match_parent"
     tools:context="com.drantiev.anton.canadiantest.MainActivity"
     >
+    <LinearLayout
+        android:id="@+id/difficulty_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/opening_android_canada"
+        android:alpha="0.7">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Choose your difficulty:"
+            />
+        <RadioGroup
+            android:id="@+id/rg_difficulty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp">
+            <RadioButton
+                android:id="@+id/rb_easy"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Easy"/>
+            <RadioButton
+                android:id="@+id/rb_medium"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Medium"/>
+            <RadioButton
+                android:id="@+id/rb_hard"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Hard"/>
+        </RadioGroup>
+        <Button
+            android:id="@+id/btn_continue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:text="Continue"/>
+    </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
@@ -76,18 +119,19 @@
                 android:padding="20dp"
                 android:text="radio button" />
         </RadioGroup>
+        <Button
+            android:id="@+id/btn_next"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="60sp"
+            android:layout_centerHorizontal="true"
+            android:gravity="center"
+            android:text="Next" />
     </LinearLayout>
 
 
-    <Button
-        android:id="@+id/btn_next"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="60sp"
-        android:layout_centerHorizontal="true"
-        android:gravity="center"
-        android:text="Next" />
+
 
     <LinearLayout
         android:id="@+id/transitions_container_answer"
